fix UI overflow issue + change size of controls based on vw + change drag handle to be whole signature element + change flow so operator must manually push window to tablet - remove signing initiation by operator

--- a/src/component/client-side-topaz.module.css
+++ b/src/component/client-side-topaz.module.css
@@ -1,22 +1,28 @@
 .topaz_document_container {
 	
 	&[data-pushed="true"] {
-		width: 1100px;
+		width: 68.75rem;
 		height: calc(100% - .5rem);
+		margin: 1.5rem;
 	}
 	&[data-files="false"] {
 		display: none;
 		flex: 0;
 	}
+	width: 70vw;
 	/* padding-right: 345px; */
-	margin: 1.5rem;
+	
 	/* box-sizing: border-box;  */
 	padding: auto;
 	justify-content: center;
 	align-items: center;
 	display: flex;
-	height: 100%;
-	flex : 1;
+	height: 100vh;
+	flex : 1 0 0px;
+}
+.canvas_container {
+overflow: scroll;
+height: 100vh;
 }
 
 .topaz_container {
@@ -29,7 +35,7 @@
 }
 
 .document {
-	width: 1100px;
+	width:100%;
 	height: 100%;
 }
 
