--- a/src/component/sign-controls.module.css
+++ b/src/component/sign-controls.module.css
@@ -6,7 +6,7 @@
 	/* height: 100%; */ /* removed to allow stretch to occup */
 	/* width: 346px; */
 	display: flex;
-    flex: 0 0 346px;
+    width: 30vw;
     box-shadow: 0 4px 16px 0 rgba(99,99,99,.5);
 	flex-direction: column;
 	align-items: center;
